<?xml version="1.0" encoding="utf-8"?>

<tools:LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_anweisung" />
    <EditText android:id="@+id/edt_betrag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>
    <RadioGroup android:id="@+id/rg_art"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <RadioButton android:id="@+id/rb_art_netto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_netto"
        android:textSize="16sp"
        android:checked="true" />
    <RadioButton android:id="@+id/rb_art_brutto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_brutto"
        android:textSize="16sp" />
    </RadioGroup>
    <Spinner android:id="@+id/sp_umsatzsteuer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawSelectorOnTop="true"
        android:entries="@array/ust_anzeige"
        android:entryValues="@array/ust_werte" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_berechnen"
        android:layout_gravity="center"
        android:onClick="onClickBerechnen" />
</tools:LinearLayout>