<?xml version="1.0" encoding="utf-8"?>
<tools:TableLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ErgebnisActivity">
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_nettobetrag" />
        <TextView
            android:id="@+id/txt_nettobetrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_umsatzsteuer" />
        <TextView
            android:id="@+id/txt_umsatzsteuer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_bruttobetrag" />
        <TextView
            android:id="@+id/txt_bruttobetrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>
</tools:TableLayout>